--- a/src/widget/view-inspector.css
+++ b/src/widget/view-inspector.css
@@ -8,30 +8,38 @@
     z-index: 2000;
     /* pointer-events: none; */
 }
-.discovery-view-inspector-overlay.pick-element {
-    pointer-events: auto;
-}
 .discovery-view-inspector-overlay .overlay {
     position: absolute;
-    background-color: rgba(0, 255, 0, 0.001);
     transition: background-color 15ms 25ms;
     box-sizing: border-box;
+}
+.discovery-view-inspector-overlay .overlay.view-root {
+    pointer-events: none;
+}
+.discovery-view-inspector-overlay .overlay:not(.view-root) {
+    pointer-events: auto;
 }
 .discovery-view-inspector-overlay .overlay.hovered {
     background-color: rgba(0, 255, 0, var(--discovery-background-alpha));
     outline: 1px dashed rgba(0, 128, 0, .4);
     --discovery-background-alpha: .3;
 }
+.discovery-view-inspector-overlay .overlay.view-root.hovered {
+    background-color: rgba(106, 0, 204, var(--discovery-background-alpha));
+    outline: 1px dashed rgba(54, 0, 102, .4);
+}
 .discovery-root-darkmode .discovery-view-inspector-overlay .overlay.hovered {
     outline-color: rgba(128, 200, 128, .65);
     --discovery-background-alpha: .2;
+}
+.discovery-root-darkmode .discovery-view-inspector-overlay .overlay.view-root.hovered {
+    outline-color: rgba(111, 74, 152, .65);
 }
 
 .discovery-inspect-details-popup {
     pointer-events: none;
     z-index: 2001;
     max-width: 650px !important;
-    background: rgba(255, 255, 255, var(--discovery-background-alpha));
     display: grid;
     grid-template-areas:
         "stack"
@@ -39,11 +47,14 @@
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
     gap: 1px;
+    padding: 1px;
+    background: rgba(255, 255, 255, var(--discovery-background-alpha));
 
     --discovery-background-alpha: .95;
     --discovery-mate-background: rgba(240, 240, 240, .5);
     --discovery-link-color: #333;
     --discovery-link-underline-color: #0002;
+    --discovery-view-root-highlight-color: rgba(106, 0, 204, 25%);
 }
 .discovery-root-darkmode.discovery-inspect-details-popup {
     background: rgba(36, 36, 36, var(--discovery-background-alpha));
@@ -52,6 +63,7 @@
     --discovery-mate-background: rgba(52, 52, 52, .5);
     --discovery-link-color: #aaa;
     --discovery-link-underline-color: #aaa2;
+    --discovery-view-root-highlight-color: rgba(189, 120, 255, 25%);
 }
 .discovery-inspect-details-popup.frozen {
     pointer-events: all;
@@ -60,7 +72,6 @@
     right: 20px !important;
     bottom: 20px !important;
     height: calc(100vh - 40px); /* Safari scrolls popup content otherwise */
-    padding: 1px;
     max-height: none !important;
     max-width: none !important;
     transition: .1s ease-in-out;
@@ -82,8 +93,8 @@
     white-space: nowrap;
 }
 .discovery-inspect-details-popup .view-tree-leaf-content .view-root {
-    background-color: rgba(85, 204, 0, .25);
-    box-shadow: 0 0 0 3px rgba(85, 204, 0, .25);
+    background-color: var(--discovery-view-root-highlight-color);
+    box-shadow: 0 0 0 3px var(--discovery-view-root-highlight-color);
     display: inline;
 }
 .discovery-inspect-details-popup .view-tree-leaf-content .selected {
@@ -94,12 +105,14 @@
 
 .discovery-inspect-details-popup .stack-view-chain {
     grid-area: stack;
+    gap: 1px;
 }
 .discovery-inspect-details-popup .stack-view-chain .view-toggle {
     border-radius: 0;
+    margin: 0;
 }
 .discovery-inspect-details-popup .stack-view-chain .view-root:not(.checked):not(:hover) {
-    background-color: rgba(85, 204, 0, .25);
+    background-color: var(--discovery-view-root-highlight-color);
 }
 
 .discovery-inspect-details-popup .inspect-details-content {
