--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -71,12 +71,12 @@
     flex: 1;
     position: relative;
     overflow: auto;
-    padding: 20px 40px 30px;
     z-index: 10;
 }
 
-.discovery-content .page {
-    padding-top: 15px;
+.discovery-content > .page {
+    padding: 35px 40px 30px;
+}
 }
 
 .discovery-sidebar {
@@ -150,24 +150,42 @@
     padding: 0 1px;
 }
 
-.discovery-content-badges {
-    position: absolute;
+.discovery-nav {
+    position: fixed;
+    z-index: 102;
     top: 0;
     right: 40px;
+    padding: 0 1px 1px;
+    border-radius: 0 0 6px 6px;
+    background-color: rgba(255, 255, 255, .92);
+    transition: background-color .25s ease-in;
     user-select: none;
 }
-.discovery-content-badges :first-child {
+.discovery-root-darkmode .discovery-nav {
+    background-color: rgba(36, 36, 36, .92);
+}
+@supports (backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px)) {
+    .discovery-nav {
+        background-color: rgba(255, 255, 255, .8);
+        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px);
+    }
+    .discovery-root-darkmode .discovery-nav {
+        background-color: rgba(36, 36, 36, .8);
+    }
+}
+.discovery-nav > :first-child {
     border-bottom-left-radius: 5px;
     transition: border-radius .25s ease-in-out;
 }
-.discovery-content-badges :last-child {
+.discovery-nav > :last-child {
     border-bottom-right-radius: 5px;
     transition: border-radius .25s ease-in-out;
 }
-.discovery-content-badges .view-nav-button.discovery-view-popup-active {
+.discovery-nav .view-nav-button.discovery-view-popup-active {
     border-radius: 0;
 }
-.discovery-content-badges .view-nav-button[data-name="burger"] {
+.discovery-nav .view-nav-button[data-name="burger"] {
     background-image: url(hamburger-menu.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -175,7 +193,7 @@
 }
 
 .discovery[data-dzen] .discovery-sidebar,
-.discovery[data-dzen] .discovery-content-badges {
+.discovery[data-dzen] .discovery-nav {
     display: none;
 }
 
