--- a/src/pages/report/header.css
+++ b/src/pages/report/header.css
@@ -14,6 +14,12 @@
 .discovery-root-darkmode .page-report > .report-header {
     background-color: rgba(36, 36, 36, .92);
 }
+.page-report.overscrolled > .report-header {
+    box-shadow: 0 0 3px rgba(0, 0, 0, .2);
+}
+.discovery-root-darkmode .page-report.overscrolled > .report-header {
+    box-shadow: 0 0 3px rgba(0, 0, 0, .5);
+}
 @supports (backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px)) {
     .page-report > .report-header {
         background-color: rgba(255, 255, 255, .8);
