--- a/src/inspector/style/overlay.css
+++ b/src/inspector/style/overlay.css
@@ -6,8 +6,27 @@
     bottom: 0;
     background-color: rgba(0, 0, 255, .1);
     z-index: 2000;
-    /* pointer-events: none; */
 }
+
+.discovery-view-inspector-overlay .cancel-hint {
+    content: 'Inspection mode is enabled. Press Esc to cancel';
+    position: absolute;
+    top: 4px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 2px 10px;
+    font-size: 12px;
+    border-radius: 25px;
+    background-color: var(--discovery-background-color);
+    opacity: .8;
+}
+.discovery-view-inspector-overlay .cancel-hint::before {
+    content: 'Inspection mode is enabled. Press Esc to cancel';
+}
+.discovery-view-inspector-overlay .cancel-hint[data-alt]::before {
+    content: 'Inspection mode is enabled. Unhold Alt to cancel';
+}
+
 .discovery-view-inspector-overlay .overlay {
     position: absolute;
     transition: background-color 15ms 25ms;
