--- a/src/views/index.css
+++ b/src/views/index.css
@@ -21,6 +21,7 @@
 @import url('./menu-item.css');
 @import url('./menu.css');
 @import url('./nav-button.css');
+@import url('./page-header.css');
 @import url('./popup.css');
 @import url('./section.css');
 @import url('./select.css');
