--- a/src/pages/views-showcase.css
+++ b/src/pages/views-showcase.css
@@ -1,10 +1,10 @@
 .page-views-showcase {
+    flex: 1;
     display: flex;
     flex-direction: row;
     border: 1px solid rgba(170, 170, 170, 0.4);
-    margin: 15px 0 0;
+    margin: 35px 40px 20px;
     padding: 0 !important;
-    height: calc(100vh - 65px);
     box-sizing: border-box;
     overflow: hidden;
     border-radius: 3px;
