--- a/src/views/index.css
+++ b/src/views/index.css
@@ -76,7 +76,6 @@
     outline: none;
 }
 .more-buttons .more-button:active {
-    box-shadow: inset 0 2px 1px #f0f0f0;
-    padding-top: 5px;
-    padding-bottom: 3px;
+    background-color: rgba(131, 131, 131, 0.25);
+    border-color: rgba(127, 127, 127, 0.4);
 }
