--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -69,6 +69,8 @@
 
 .discovery-content {
     flex: 1;
+    display: flex;
+    flex-direction: column;
     position: relative;
     overflow: auto;
     z-index: 10;
