--- a/src/inspector/style/toolbar.css
+++ b/src/inspector/style/toolbar.css
@@ -21,4 +21,6 @@
     padding: 5px 8px 7px;
     font-size: 12px;
     line-height: 12px;
+    border-radius: 2px 1px 2px 2px;
+    box-shadow: none;
 }
