Add text-size-adjust: none to root elements

--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -9,6 +9,8 @@
     font-family: Tahoma, Verdana, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.6;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
 
     background-color: var(--discovery-background-color, white);
     color: var(--discovery-color, black);
