--- a/src/inspector/style/content.css
+++ b/src/inspector/style/content.css
@@ -14,7 +14,8 @@
 .discovery-inspect-details-popup .content .view-source {
     font-size: 11px;
     line-height: 15px;
-    background-color: #25252585;
+    background-color: transparent;
+    /* background-color: #25252585; */
 }
 
 .discovery-inspect-details-popup .content.props-config {
@@ -38,6 +39,9 @@
     color: inherit;
     text-shadow: 1px 1px 0 rgba(0, 0, 0, .25);
     border-bottom: 2px solid #666;
+}
+.discovery-inspect-details-popup .content-section.render {
+    --header: 'Render function';
 }
 .discovery-inspect-details-popup .content-section.props {
     --header: 'Render props';
