--- a/src/inspector/style/toolbar.css
+++ b/src/inspector/style/toolbar.css
@@ -12,8 +12,8 @@
 .discovery-inspect-details-popup .stack-view-chain .view-toggle {
     border-radius: 0;
     margin: 0;
-    padding: 5px 8px 6px;
-    line-height: 15px;
+    padding: 5px 8px;
+    line-height: 16px;
 }
 .discovery-inspect-details-popup .stack-view-chain .view-root:not(.checked):not(:hover) {
     background-color: var(--discovery-view-root-highlight-color);
