--- a/src/inspector/style/sidebar.css
+++ b/src/inspector/style/sidebar.css
@@ -10,7 +10,7 @@
 .discovery-inspect-details-popup .sidebar .view-root {
     display: inline-block;
     margin-bottom: 1px;
-    margin-left: -4px;
+    margin-left: -6px;
     border: 4px solid transparent;
     border-width: 1px 8px;
     background-color: var(--discovery-view-root-highlight-color);
@@ -20,10 +20,15 @@
     box-shadow: 0 0 0 3px rgba(78, 187, 255, .3);
     display: inline;
 }
+.discovery-inspect-details-popup .sidebar .skipped {
+    text-decoration: line-through;
+    font-style: italic;
+    opacity: .65;
+}
 
 .discovery-inspect-details-popup .sidebar > .view-tree-leaf:only-child {
     margin: -4px 0 0 -4px;
-    grid-template-columns: 4px auto;
+    grid-template-columns: 6px auto;
     background: none;
 }
 .discovery-inspect-details-popup .sidebar > .view-tree-leaf:only-child > .view-tree-leaf-toggle {
