--- a/src/views/source.css
+++ b/src/views/source.css
@@ -3,13 +3,13 @@
 .view-source {
     padding: 8px;
     overflow: auto;
-    white-space: pre;
-    background: rgba(180, 180, 180, 0.2);
     border-radius: 3px;
+    white-space: pre;
     font-family: Consolas, Monaco, monospace;
     font-size: 12px;
     line-height: 18px;
-    color: #666;
+    color: var(--discovery-fmt-color);
+    background-color: rgba(180, 180, 180, 0.2);
 }
 .view-source .lines {
     float: left;
