--- a/src/views/index.css
+++ b/src/views/index.css
@@ -18,6 +18,7 @@
 @import url('./link.css');
 @import url('./list-item.css');
 @import url('./lists.css');
+@import url('./markdown.css');
 @import url('./menu-item.css');
 @import url('./menu.css');
 @import url('./nav-button.css');
