--- a/src/views/_usage.css
+++ b/src/views/_usage.css
@@ -1,3 +1,6 @@
+.discovery-view-usage  > .view-header:first-child {
+    margin-top: 0;
+}
 .discovery-view-usage .usage-render {
     position: relative;
     z-index: 0;
