--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -189,7 +189,7 @@
     border-radius: 0;
 }
 .discovery-nav .view-nav-button[data-name="burger"] {
-    background-image: url(hamburger-menu.svg);
+    background-image: url(burger-menu.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 18px;
