--- a/src/views/struct/style/annotation.css
+++ b/src/views/struct/style/annotation.css
@@ -32,11 +32,11 @@
     border-radius: 4px;
 }
 .view-struct .value-annotation.before.style-default {
-    background: linear-gradient(to left, white, transparent);
+    background: linear-gradient(to left, white, rgba(255, 255, 255, 0));
     border-right: 1px solid;    
 }
 .view-struct .value-annotation.after.style-default {
-    background: linear-gradient(to right, white, transparent);
+    background: linear-gradient(to right, white, rgba(255, 255, 255, 0));
     border-left: 1px solid;
 }
 
