--- a/src/views/tab.css
+++ b/src/views/tab.css
@@ -10,6 +10,7 @@
 .view-tab.active {
     z-index: 10;
     border-bottom: none;
+    padding-bottom: 4px;
     cursor: default;
 }
 .view-tab.active::before {
