--- a/src/views/table.css
+++ b/src/views/table.css
@@ -9,7 +9,7 @@
     font-weight: normal;
     text-align: left;
     background: rgba(141, 141, 141, 0.15) no-repeat right 1px center;
-    background-size: 15px;
+    background-size: 16px;
     background-clip: padding-box;
     border: 1px solid transparent;
     border-width: 1px 1px 1px 0;
@@ -21,6 +21,10 @@
     padding-right: 18px;
     background-image: url('./table-sortable.svg');
     cursor: pointer;
+}
+.view-table > thead th.sortable:not(.asc):not(.desc) {
+    background-size: 14px;
+    background-position: right 2px center;
 }
 .view-table > thead th.sortable.asc {
     background-image: url('./table-sort-asc.svg');
