--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -108,17 +108,23 @@
 }
 .discovery-sidebar .view-tab.active::before {
     background-color: white;
+    transition-property: background-color;
+    transition-duration: .25s;
+    transition-timing-function: ease-in;
 }
 .discovery-root-darkmode .discovery-sidebar .view-tab.active::before {
-    background-color: rgba(255, 255, 255, .05);
+    background-color: #363637;
 }
 .discovery-sidebar .view-content-filter > .view-input {
     border-bottom: 1px solid rgba(170, 170, 170, 0.4);
-    background-color: white;
     margin-bottom: -1px;
+    background-color: white;
+    transition-property: background-color;
+    transition-duration: .25s;
+    transition-timing-function: ease-in;
 }
 .discovery-root-darkmode .discovery-sidebar .view-content-filter > .view-input {
-    background-color: rgba(255, 255, 255, .05);
+    background-color: #363637;
 }
 .discovery-sidebar .view-content-filter > .view-input input,
 .discovery-sidebar .view-content-filter > .view-input input:focus {
