--- a/models/load-benchmark/ui.css
+++ b/models/load-benchmark/ui.css
@@ -19,40 +19,60 @@
 .discovery-root-darkmode .view-textarea {
     color: #d1c7c3;
 }
+.view-checkbox {
+    display: block;
+}
+.freeze-detector {
+    position: absolute;
+    margin-top: -20px;
+}
+.freeze-detector::after {
+    content: ' <- updates 60fps, should not freeze';
+    color: #888;
+    font-size: 12px;
+}
 
 .benchmarks {
     display: flex;
     align-items: flex-start;
-    gap: 10px;
+}
+.results {
+    margin-left: 10px;
 }
 
 .progress-tracker {
-    width: 400px;
-    background-color: rgba(0, 0, 0, .1);
+    width: 500px;
     padding: 4px 8px 8px;
     margin-bottom: 3px;
+}
+.discovery-root-darkmode .progress-tracker {
+    background-color: rgba(0, 0, 0, .1);
 }
 .progress-tracker.error {
     overflow: auto;
     font-size: 14px;
 }
-.progress-tracker.done {
-    background-color: rgba(0, 0, 0, .1);
-}
-.progress-tracker::after {
-    content: var(--url);
-    font-size: 11px;
-    margin-top: 2px;
-    display: block;
-    opacity: .4;
-}
-.progress-tracker.done::after {
-    font-size: 13px;
-    opacity: 1;
-    transition: all .35s;
-}
 .progress-tracker .title {
     font-size: 13px;
+}
+.progress-tracker .view-alert {
+    border: none;
+    padding: 8px 12px;
+    border-radius: 0;
+    margin: -4px -8px 4px;
+    font-size: 12px;
+}
+.progress-tracker .view-alert .view-header {
+    display: none;
+    margin: 0;
+    font-size: inherit;
+}
+.progress-tracker .view-alert pre,
+.progress-tracker .view-alert + .view-alert {
+    overflow: hidden;
+    max-height: 14px;
+    line-height: 14px;
+    margin: 0;
 }
 .progress-tracker:not(.error) .progress {
     content: '';
@@ -64,6 +84,7 @@
     height: 3px;
     background: rgba(198, 198, 198, 0.3);
     border-radius: 2px;
+    max-width: 320px;
 }
 .progress-tracker:not(.error) .progress::before {
     content: '';
@@ -92,4 +113,84 @@
     overflow: hidden;
     transition: all .5s;
     opacity: 0;
+}
+
+.progress-tracker .stat {
+    display: flex;
+}
+.progress-tracker .stat .url {
+    font-size: 11px;
+    margin-top: 2px;
+    display: block;
+    opacity: .4;
+    flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.progress-tracker.done .stat .url {
+    font-size: 13px;
+    opacity: 1;
+    transition: all .35s;
+}
+.progress-tracker .stat .metric {
+    overflow: hidden;
+    line-height: 1;
+    padding: 5px 0;
+    max-width: 0;
+    margin-left: 1px;
+    opacity: 0;
+    background-color: #ffd70020;
+    font-size: 13px;
+    text-align: right;
+    transition: all .2s .2s ease-in-out;
+}
+.progress-tracker.done .stat .metric {
+    padding: 5px 8px;
+    max-width: 100px;
+    opacity: 1;
+}
+
+.progress-tracker .stat .throughput-rate {
+    order: 3;
+    min-width: 55px;
+}
+.progress-tracker .stat .load-time {
+    background-color: #ffd70040;
+    order: 4;
+}
+
+.total-stat {
+    display: flex;
+    align-items: baseline;
+    padding: 4px 8px;
+}
+.total-stat .span {
+    flex: 1;
+}
+.total-stat > :not(.span) {
+    line-height: 1;
+    font-size: 12px;
+}
+.total-stat .throughput-rate {
+    display: inline-block;
+    background-color: #ffd70020;
+    padding: 4px 8px;
+    margin-right: 20px;
+}
+.total-stat .score {
+    display: inline-block;
+    vertical-align: sub;
+    padding: 6px 8px;
+    margin-top: -4px;
+    margin-bottom: 2px;
+    margin-left: 5px;
+    font-size: 20px;
+    background-color: #ffd70040;
+}
+.total-stat .score-note {
+    font-size: 10px;
+    display: block;
+    color: #888;
+    text-align: right;
 }
