--- a/models/load-benchmark/ui.css
+++ b/models/load-benchmark/ui.css
@@ -183,8 +183,9 @@
 .total-stat {
     display: flex;
     align-items: baseline;
-    padding: 4px 8px;
+    padding: 4px 8px 4px 0;
     opacity: 0;
+    overflow: hidden;
     transition: all .25s .15s;
 }
 .results.done .total-stat {
